--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "lint": "eslint lib/**; exit 0",
     "lint:watch": "esw -w lib/**",
     "prepublish": "npm run build",
-    "start": "echo \"start: start start start start\"",
-    "prepare": "npm run build",
-    "predeploy": "echo \"predeploy: predeploy predeploy predeploy predeploy\"",
-    "deploy": "echo \"deploy: deploy deploy deploy deploy\""
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
