--- a/package.json
+++ b/package.json
@@ -21,6 +21,14 @@
     "url": "https://github.com/labzar/react-universal-component-lib/issues"
   },
   "homepage": "https://github.com/labzar/react-universal-component-lib#readme",
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "prop-types": "^15.6.2",
+    "react-router-dom": "^4.2.2",
+    "semantic-ui-react": "^0.77.1",
+    "styled-components": "^3.4.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -32,10 +40,6 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
     "eslint-watch": "^4.0.2",
-    "polished": "^1.9.3",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "styled-components": "^3.4.0"
+    "polished": "^1.9.3"
   }
 }
