--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel lib -d build",
     "lint": "eslint lib/**; exit 0",
     "lint:watch": "esw -w lib/**",
     "prepublish": "npm run build",
-    "prepare": "npm run build"
+    "prepare": "npm run buildProd",
+    "buildProd": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js",
+    "buildDev": "cross-env NODE_ENV=production webpack -p --config webpack.config.development.js"
   },
   "repository": {
     "type": "git",
@@ -21,25 +22,32 @@
     "url": "https://github.com/labzar/react-universal-component-lib/issues"
   },
   "homepage": "https://github.com/labzar/react-universal-component-lib#readme",
-  "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "prop-types": "^15.6.2",
-    "react-router-dom": "^4.2.2",
-    "semantic-ui-react": "^0.77.1",
-    "styled-components": "^3.4.0"
-  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
+    "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.2.0",
     "eslint": "^5.2.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
     "eslint-watch": "^4.0.2",
-    "polished": "^1.9.3"
+    "extract-text-webpack-plugin": "^3.0.2",
+    "polished": "^1.9.3",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "rimraf": "^2.6.2",
+    "styled-components": "^3.4.0",
+    "webpack": "^4.16.4",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
+  },
+  "dependencies": {
+    "react-router-dom": "^4.3.1",
+    "semantic-ui-react": "^0.82.1"
   }
 }
